<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_create">Create An Account</string>
    <string name="welcome_text">Welcome to Chat App</string>
    <string name="text_loginBtn">Login to Account</string>
    <string name="create_act">Create New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_name">Username</string>
    <string name="status">User Status</string>
    <string name="txt_change_pic">Change Picture</string>
    <string name="txt_change_status">Change Status</string>
    <string name="txt_enter_status">Enter your Status</string>
    <string name="txt_hint_status">Status...</string>
    <string name="txt_status_update">Update Status</string>
    <string name="txt_user_status">User Status</string>
    <string name="txt_send_msg">Send Message</string>
    <string name="txt_image_description">User Profile Image</string>
</resources>