<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:background="@color/darkBg">

    <ImageView
        android:id="@+id/img_profile_pic"
        android:layout_width="387dp"
        android:layout_height="197dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/txt_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happy_woman" />

    <TextView
        android:id="@+id/txt_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#f0f7f4"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_text_24sp"
        android:text="@string/txt_name"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_pic" />

    <TextView
        android:id="@+id/txt_profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#f0f7f4"
        android:textSize="@dimen/dimen_text_18sp"
        android:text="@string/status"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_send_msg"
        android:layout_width="222dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bt_shape"
        android:text="@string/txt_send_msg"
        android:textColor="#f0f7f4"
        android:stateListAnimator="@drawable/state_list_animator_z"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_profile_status" />

</androidx.constraintlayout.widget.ConstraintLayout>