<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen_155dp"
        android:layout_height="@dimen/dimen_155dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="@dimen/text_dimen_25sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_80dp"
        android:background="@color/colorAccent"
        android:textAllCaps="true"
        android:textColor="@color/grey_100"
        android:text="@string/text_loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_create_acnt"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:textAllCaps="true"
        android:textColor="@color/grey_100"
        android:text="@string/text_create"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>