<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StatusActivity"
    android:background="@drawable/bg">

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="210dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="50dp"
                android:paddingEnd="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/txt_enter_status"
                    android:textColor="#fff"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen_10dp"/>

                <EditText
                    android:id="@+id/ed_update_status"
                    android:layout_width="300dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/selector_bg_edit_2"
                    android:ems="10"
                    android:hint="@string/txt_hint_status"
                    android:inputType="textPersonName"
                    android:textColor="#f0f7f4"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="15sp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_update_status"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/txt_status_update"
                    android:textColor="#d3d3d3" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>